css/style.css
html {
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
  overflow-x: hidden;
}

body {
  color: white;
  font-family: 'Montserrat';
  background-color: black;
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#remove-screen-btn {
  visibility: hidden;
}

#remove-screen-btn {
  font-weight: 600;
  border: none;
  border-radius: 2px;
  font-family: "Montserrat";
  color: black;
  padding: 7px 16px;
  cursor: pointer;
  background: #FDD92F;
  font-size: 14px;
}

#remove-screen-btn:hover {
  transition: color 0.3s;
  color: white;
  background-color: #AA4197;
}

#initial_screen {
  background-color: black;
  color: white;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 9999;
  visibility: visible;
}

#header {
  position: fixed;
  background-color: black;
  height: 45px;
  top: 0px;
  left: 0px;
  display: flex;
  width: 100%;
  z-index: 999;
  visibility: hidden;
}

#indicator {
  width: 20px;
  position: fixed;
  top: 60px;
  z-index: 999;
}

#story {
  position: absolute;
  left: 0px;
  top: 45px;
  visibility: hidden;
}

#peace_img {
  position: absolute;
  top: 5px;
  left: 0px;
  height: 40px;
  z-index: 999;
}

#uoe_img {
  position: absolute;
  top: 50px;
  right: 5px;
  height: 40px;
  z-index: 999;
}

#and_img {
  position: absolute;
  top: 7px;
  right: 5px;
  height: 40px;
  z-index: 999;
}

#chart_icon,
#research_icon,
#area_icon,
#pie_icon,
#globe_icon,
#bee_icon {
  opacity: 0.6;
  position: absolute;
  height: 20px;
  z-index: 999;
  left: 18px;
  cursor: pointer;
}

#icon_tooltip {
  background-color: white;
  color: black;
  left: 50px;
  position: absolute;
  visibility: hidden;
  font-size: 14px;
  text-align: center;
  padding: 5px;
  white-space: nowrap;
  z-index: 999;
  font-weight: 600;
  border-radius: 1px;
}

#bee_icon:hover {
  opacity: 1;
}

.active {
  opacity: 1 !important;
}

#globe_icon:hover {
  opacity: 1;
  transition: 0.2s;
}

#area_icon:hover {
  opacity: 1;
  transition: 0.2s;
}

#pie_icon:hover {
  opacity: 1;
  transition: 0.2s;
}

#chart_icon:hover {
  opacity: 1;
  transition: 0.2s;
}

#research_icon:hover {
  opacity: 1;
}

h1 {
  margin: auto;
  font-size: 28px;
}

#legend {
  position: absolute;
  top: 50px;
  left: 5px;
  font-size: 12px;
}

.rec {
  height: 20px;
  width: 20px;
  background-color: #7B8AD6;
  display: inline-block;
  position: absolute;
  margin-right: 3px;
  margin-top: 8px;
}

.rec1 {
  height: 4px;
  width: 20px;
  background-color: white;
  /* border-radius: 50%; */
  display: inline-block;
  position: absolute;
  margin-right: 3px;
  margin-top: 15px;
}

.dot {
  height: 18px;
  width: 18px;
  background-color: #7B8AD6;
  border-radius: 50%;
  display: inline-block;
  position: absolute;
  margin-right: 3px;
  margin-top: 20px;
}

.dot1 {
  height: 18px;
  width: 18px;
  background-color: white;
  border-radius: 50%;
  display: inline-block;
  position: absolute;
  margin-right: 3px;
  margin-top: 20px;
}

.dot2 {
  height: 18px;
  width: 18px;
  background-color: #7B8AD6;
  display: inline-block;
  position: absolute;
  margin-right: 3px;
  margin-top: 15px;
}

.dot3 {
  height: 18px;
  width: 18px;
  background-color: white;
  display: inline-block;
  position: absolute;
  margin-right: 3px;
  margin-top: 15px;
}

#leg_p {
  margin: auto;
  background-color: rgba(0, 0, 0, 0);
  padding-left: 30px;
  font-size: 12px;
  line-height: 15px;
}

#separator {
  position: relative;
  display: flex;
  background-image: url("../img/ru.PNG");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: contain;
  background-position: center;
}

#separator05,
#separator1 {
  position: relative;
  display: flex;
  padding-left: 20px;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: contain;
  background-position: center;
}

.graphic,
.graphic05,
.graphic06,
.graphic075,
.graphic1 {
  position: relative;
  width: 100%;
}

.graphic__prose,
.graphic__prose__05,
.graphic__prose__06,
.graphic__prose__075,
.graphic__prose__1 {
  pointer-events: none;
  position: relative;
  font-size: 16px;
  z-index: 99;
  /* pointer-events: none; */
  /* background-color: rgba(0, 0, 0, 0); */
  /* box-shadow: -1.5px 0px 5px -3px #616161; */
}

.trigger {
  padding: 10px;
  margin-left: 50px;
  text-align: left;
  font-size: 14px;
  /* border-bottom: 1px solid white; */
}

p {
  position: relative;
  margin: auto;
  border-radius: 5px;
  background-color: #111111;
  padding: 15px;
  font-size: 16px;
  line-height: 20px;
}

@media (max-width: 1250px) {
  p {
      font-size: 14px;
  }
}

h5 {
  font-weight: normal;
}

.graphic__vis {
  position: absolute;
  top: 0px;
  left: 0px;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  height: 100vh;
  background-color: rgba(0, 0, 0, 0);
  z-index: 99;
}

.graphic__vis__05,
.graphic__vis__06,
.graphic__vis__075,
.graphic__vis__1 {
  position: absolute;
  top: 0;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  height: 1000px;
}

.graphic__vis svg,
.graphic__vis__05 svg,
.graphic__vis__06 svg,
.graphic__vis__075 svg,
.graphic__vis__1 svg {
  top: 50%;
  position: relative;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  transform: translateY(-50%);
}

.graphic__vis.is-fixed {
  position: fixed;
}

.graphic__vis.is-bottom {
  top: auto;
  bottom: 0;
}

.graphic__vis__05.is-fixed {
  position: fixed;
  top: 5px;
}

.graphic__vis__05.is-bottom {
  top: auto;
  bottom: 0;
}

.graphic__vis__06.is-fixed {
  position: fixed;
  top: 5px;
}

.graphic__vis__06.is-bottom {
  top: auto;
  bottom: 0;
}

.graphic__vis__075.is-fixed {
  position: fixed;
  top: 5px;
}

.graphic__vis__075.is-bottom {
  top: auto;
  bottom: 0;
}

.graphic__vis__1.is-fixed {
  position: fixed;
  top: 5px;
}

.graphic__vis__1.is-bottom {
  top: auto;
  bottom: 0;
}

#vik1,
#vik2,
#vik3,
#vik4,
#vik5 {
  float: left;
  margin: auto;
}

#publications {
  position: relative;
  transition: transform .2s;
  height: 300px;
  /* Animation */
  -webkit-box-shadow: 0 0 8px 1px #868686;
  -moz-box-shadow: 0 0 8px 1px #868686;
  box-shadow: 0 0 8px 1px #868686;
}

@media (max-width: 1300px) {
  #publications {
      height: 250px;
  }
}

@media (max-width: 1160px) {
  #publications {
      height: 200px;
  }
}

#publications:hover {
  transform: scale(1.06);
}

.tick line {
  stroke: white;
  stroke-opacity: 1;
}

.bee_x_axis line {
  opacity: 0;
}

.multiline_x_axis path,
.multiline_y_axis path {
  opacity: 0;
}

#para1 {
  width: 600px;
}

#ch1_div,
#ch2_div {
  font-family: Montserrat;
  paint-order: stroke;
  stroke-linecap: butt;
  stroke-linejoin: miter;
  font-size: 24px;
  text-align: center;
  margin: auto;
  text-align: center;
}

#map {
  position: relative;
  left: -95px
}

#hover_description {
  position: absolute;
  font-size: 12px;
  z-index: 999;
  background-color: black;
  width: 120px;
  color: white;
  border-radius: 3px;
  padding: 0.8em;
  border: none;
  box-shadow: 0 0px 0px 0 rgb(255 255 255 / 10%), 0 0px 5px 0 rgba(255, 255, 255, 0.2);
  margin: auto;
  display: none;
  opacity: 0.8;
}

/* Style The Dropdown Button */
.dropbtn {
  border-radius: 2px;
  font-family: "Montserrat";
  /* background-color: #313461; */
  background: #FDD92F;
  color: black;
  padding: 8px;
  font-size: 14px;
  border: none;
  cursor: pointer;
  font-weight: 600;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  width: 105px;
  z-index: 999;
  position: absolute;
  top: 8px;
  left: 140px;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  border-radius: 2px;
  display: none;
  position: absolute;
  background-color: #0F1826;
  min-width: 120px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: white;
  padding: 10px 10px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
  background-color: #717171
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
  display: block;
}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {
  background-color: #AA4197;
  color: white;
}

#break {
  position: relative;
  top: 0px;
  height: 200px;
}

a {
  color: yellowgreen;
}

#myBtn {
  position: fixed;
  bottom: 20px;
  left: 8px;
  z-index: 100;
  font-size: 16px;
  border: none;
  outline: none;
  /* background-color: #313461; */
  background-color: #FDD92F;
  color: black;
  cursor: pointer;
  padding: 2px 10px;
  border-radius: 2px;
  opacity: 0;
  transition: 0.3s;
}

#myBtn:hover {
  background-color: #AA4197;
  color: white;
}

